fix for jumping div

--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+html{
+    overflow: hidden;
+    width:100%;
+}
+
+body{
+    height:100%;
+    overflow-y:scroll;
+    -webkit-overflow-scrolling: touch; /* iOS velocity scrolling */
+}
+
 html {
     overflow-y:scroll;
 }
